Add Gradle configs for `noLogs` and `TestLogger`; Add `GameLogger` for custom log levels;